<resources>
    <string name="app_name">alphaFitness</string>
    <string name="record_workout_h1">Record Workout</string>
    <string name="todo">TODO</string>
    <string name="distance">distance</string>
    <string name="duration">duration</string>
    <string name="measurement">km</string>
    <string name="time">minutes</string>
    <string name="durationCounter">0:00:00</string>
    <string name="distanceCounter">0.0</string>
    <string name="personName">Peter Dole</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
